--- a/style.css
+++ b/style.css
@@ -1274,3 +1274,41 @@ body{
     min-height: 15vh;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.word span {
+  font-size: 22px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 600;
+  animation: blur 3s linear infinite;
+  line-height: 20px;
+  transition: all 0.5s;
+  letter-spacing: 0.2em;
+ }
+ 
+ @keyframes blur {
+  0%, 90% {
+   filter: blur(0);
+  }
+ 
+  50% {
+   filter: blur(10px);
+  }
+ }
