--- a/style.css
+++ b/style.css
@@ -1301,6 +1301,10 @@ body{
   line-height: 20px;
   transition: all 0.5s;
   letter-spacing: 0.2em;
+    margin: auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
  }
  
  @keyframes blur {
