--- a/style.css
+++ b/style.css
@@ -1530,3 +1530,34 @@ body{
 
 
 
+
+
+
+.frame{
+  text-align: center;
+  margin: auto;
+  position: relative;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  width: 50%;
+}
+
+.frame img{  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 50%;
+  
+  
+  box-shadow: inset 8px 8px 10px #c3c3c3,
+            inset -8px -8px 10px #b6b4b4;
+}
+
+@media only screen and (max-width: 600px) {
+  .frame{
+    width: 100%;
+  }
+}
+
+
