--- a/style.css
+++ b/style.css
@@ -11,6 +11,27 @@
 body{
   margin: 0px;
 }
+.header-overlay {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  font-family: 'Playfair Display', serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #c13584;
+}
 .header{
    height: inherit;
    min-height: 50vh;
