--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway&display=swap');
+
+
 
 
 
@@ -10,6 +13,7 @@
 body{
   margin: 0px;
   height: 100%;
+  font-family: 'Raleway', sans-serif;
 
 }
 .header{
