--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
   margin: 0px;
   height: 100%;
   font-family: 'Raleway', sans-serif;
+    background: linear-gradient(145deg, #fdf6f9, #ffe6f0);
 
 }
 .header{
